--- a/css/storyBoard.css
+++ b/css/storyBoard.css
@@ -9,6 +9,8 @@
 	font-family: Verdana;
 	text-align: center;
 	vertical-align: middle;
+	font-weight: bold;
+	font-size: 20px;
 	line-height: 40px;
 
 }
@@ -17,6 +19,7 @@
 	background: #3A92B0;
 	display:block;
 	width:100%;
+	height: 60px;
 	margin:0px auto;
 	padding:0px;
 	text-align:center;
@@ -25,6 +28,6 @@
 	font-size: 12px;
 	text-align: center;
 	vertical-align: middle;
-	line-height: 18px;
+	line-height: 30px;
 
 }
