--- a/css/options.css
+++ b/css/options.css
@@ -5,14 +5,13 @@
 	margin-top: 0px;
 	margin-bottom:0px;
 	position:relative;
-
-	background: #3A92B0;
+	background: #7ec3e5;
 	display:block;
 	width:600px;
 	padding:0px;
 	text-align:center;
 	color: #FFFFFF;
-	font-family: Verdana;
+	font-family: Courier New, Verdana;
 	text-align: center;
 	vertical-align: middle;
 	border-radius: 15px;
@@ -21,6 +20,7 @@
 
 #optionsTable {
 	display: table;
+	table-layout: fixed;
 	border: 0px;
 	margin:0px;
 	border-spacing:0px;
@@ -46,7 +46,7 @@
 .superTitle{
 	color: #FFFFFF;
 	font-weight: bold;
-	font-family: Verdana;
+	font-family: Courier New, Verdana;
 	text-align: center;
 	font-size: 16px;
 	height: 40px;
@@ -55,13 +55,13 @@
 	background: #F2F2F2;
 	display: block;
 	color: #000;
-	font-weight: normal;
-	font-size: 12px;
+	font-weight: bold;
+	font-size: 14px;
 }
 .content {
 	background: #FFF;
 	height: 70px;
-	font-size:12px;
+	font-size:14px;
 }
 .buttons {
 	height: 40px;
@@ -86,5 +86,20 @@
 	border: 4px solid #111111;
 	display:none;
 	position:absolute;
+	font-style: Courier New, Verdana;
+}
+
+.input {
+	font-style: Courier New, Verdana;
+	text-align: center;
+}
+body {
+	overflow:hidden;
+	line-height:130%;
+	display:block;
+	margin:0px;
+	width:100%;
+	padding:0px;
+	background: #898989 url('../images/bg_main.gif') repeat 0 1px fixed;
 }
 
